k8s/overlays/dev/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interweb-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: constructive-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.launchql.dev"
        - "*.explorer.launchql.dev"
      secretName: interweb-constructive-tls
  rules:
    - host: "*.launchql.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: constructive-server
                port:
                  number: 3000
    - host: "*.explorer.launchql.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: constructive-server
                port:
                  number: 3001
    - host: "explorer.launchql.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: constructive-server
                port:
                  number: 3001
