k8s/overlays/dev/ingress-pgadmin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interweb-pgadmin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: constructive-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "pgadmin.launchql.dev"
      secretName: interweb-constructive-tls
  rules:
    - host: "pgadmin.launchql.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
